[package]
name = "music_analyzer_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
midi_note_recorder = {git = "https://github.com/gjf2a/midi_note_recorder"}
enum-iterator = "2.1.0"
midi-msg = "0.7.1"
rand = "0.8"

[dev-dependencies]
anyhow = "1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125" 
